--- a/x11/xfce4-desktop/Makefile
+++ b/x11/xfce4-desktop/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.107 2024/12/27 08:21:06 wiz Exp $
+# $NetBSD: Makefile,v 1.108 2024/12/29 19:13:07 bsiegert Exp $
 
-PKGREVISION= 8
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
-VERSION=	4.18.1
+VERSION=	4.20.0
 DISTNAME=	xfdesktop-${VERSION}
 PKGNAME=	xfce4-desktop-${VERSION}
 CATEGORIES=	x11
@@ -13,6 +12,7 @@ HOMEPAGE=	https://docs.xfce.org/xfce/xfdesktop/start
 COMMENT=	Xfce desktop background manager
 
 USE_LANGUAGES=	c99
+USE_TOOLS+=	gdbus-codegen
 
 BUILD_DEFS+=		PKG_SYSCONFBASE
 
@@ -23,5 +23,6 @@ CONFIGURE_ARGS+=	--sysconfdir=${PKG_SYSCONFBASE}
 .include "../../sysutils/desktop-file-utils/desktopdb.mk"
 .include "../../sysutils/libnotify/buildlink3.mk"
 .include "../../sysutils/xfce4-thunar/buildlink3.mk"
+.include "../../x11/libxfce4windowing/buildlink3.mk"
 .include "../../x11/xfce4-garcon/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
