--- a/textproc/py-orjson/Makefile
+++ b/textproc/py-orjson/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.12 2024/11/24 10:28:57 wiz Exp $
+# $NetBSD: Makefile,v 1.13 2024/12/30 06:05:44 adam Exp $
 
-DISTNAME=	orjson-3.10.12
+DISTNAME=	orjson-3.10.13
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	textproc python
 MASTER_SITES=	${MASTER_SITE_PYPI:=o/orjson/}
