--- a/www/R-htmlwidgets/Makefile
+++ b/www/R-htmlwidgets/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.6 2023/06/13 13:20:46 mef Exp $
+# $NetBSD: Makefile,v 1.7 2024/12/30 13:56:56 mef Exp $
 
 R_PKGNAME=	htmlwidgets
-R_PKGVER=	1.6.2
+R_PKGVER=	1.6.4
 CATEGORIES=	www
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -16,6 +16,12 @@ DEPENDS+=	R-rmarkdown-[0-9]*:../../textproc/R-rmarkdown
 TEST_DEPENDS+=	R-knitr-[0-9]*:../../print/R-knitr
 TEST_DEPENDS+=	R-markdown>=1.3:../../textproc/R-markdown
 TEST_DEPENDS+=	R-testthat-[0-9]*:../../devel/R-testthat
+
+TEST_DEPENDS+=	tex-ec-[0-9]*:../../fonts/tex-ec
+TEST_DEPENDS+=	tex-inconsolata-[0-9]*:../../fonts/tex-inconsolata
+TEST_DEPENDS+=	tex-latex-bin-[0-9]*:../../print/tex-latex-bin
+TEST_DEPENDS+=	tex-url-[0-9]*:../../print/tex-url
+TEST_DEPENDS+=	tex-xkeyval-[0-9]*:../../print/tex-xkeyval
 
 USE_LANGUAGES=	# none
 
