--- a/devel/re2c/Makefile
+++ b/devel/re2c/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.30 2024/12/26 11:47:46 wiz Exp $
+# $NetBSD: Makefile,v 1.31 2024/12/30 18:49:09 wiz Exp $
 
 DISTNAME=	re2c-4.0.2
 CATEGORIES=	devel
@@ -14,6 +14,7 @@ LICENSE=	public-domain
 USE_LANGUAGES=		c c++
 USE_TOOLS+=		bison gmake
 GNU_CONFIGURE=		yes
+CONFIGURE_ARGS+=	--disable-java
 # needs 'make install'
 TEST_TARGET=		check
 PYTHON_FOR_BUILD_ONLY=	tool
