--- a/www/R-mathjaxr/Makefile
+++ b/www/R-mathjaxr/Makefile
@@ -1,12 +1,14 @@
-# $NetBSD: Makefile,v 1.1 2021/09/11 11:30:55 mef Exp $
+# $NetBSD: Makefile,v 1.2 2024/12/31 09:56:33 mef Exp $
 
 R_PKGNAME=	mathjaxr
-R_PKGVER=	1.4-0
+R_PKGVER=	1.6-0
 CATEGORIES=	www
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	Using 'Mathjax' in Rd Files
 LICENSE=	gnu-gpl-v3
+
+# Package suggested but not available: 'js'
 
 USE_LANGUAGES=	# none
 
