--- a/textproc/py-sphobjinv/Makefile
+++ b/textproc/py-sphobjinv/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.8 2024/11/11 07:29:09 wiz Exp $
+# $NetBSD: Makefile,v 1.9 2024/12/31 09:59:02 adam Exp $
 
-DISTNAME=	sphobjinv-2.3.1.1
+DISTNAME=	sphobjinv-2.3.1.2
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	textproc python
 MASTER_SITES=	${MASTER_SITE_PYPI:=s/sphobjinv/}
