--- a/textproc/p5-Text-Markdown-Discount/Makefile
+++ b/textproc/p5-Text-Markdown-Discount/Makefile
@@ -1,9 +1,7 @@
-# $NetBSD: Makefile,v 1.29 2024/11/16 12:06:59 wiz Exp $
-#
+# $NetBSD: Makefile,v 1.30 2024/12/31 14:31:09 schmonz Exp $
 
-DISTNAME=		Text-Markdown-Discount-0.16
+DISTNAME=		Text-Markdown-Discount-0.17
 PKGNAME=		p5-${DISTNAME}
-PKGREVISION=		2
 CATEGORIES=		textproc perl5
 MASTER_SITES=		${MASTER_SITE_PERL_CPAN:=Text/}
 
