--- a/devel/py-ruamel-yaml/Makefile
+++ b/devel/py-ruamel-yaml/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.38 2024/11/11 07:28:22 wiz Exp $
+# $NetBSD: Makefile,v 1.39 2024/12/31 16:13:54 adam Exp $
 
-DISTNAME=	ruamel.yaml-0.18.6
+DISTNAME=	ruamel.yaml-0.18.7
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/./-/1}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=r/ruamel.yaml/}
@@ -14,8 +14,6 @@ TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
 DEPENDS+=	${PYPKGPREFIX}-ruamel-yaml-clib>=0.2.7:../../devel/py-ruamel-yaml-clib
 
 USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
