--- a/sysutils/sysbuild/Makefile
+++ b/sysutils/sysbuild/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.31 2024/07/25 05:41:52 wiz Exp $
+# $NetBSD: Makefile,v 1.32 2025/01/01 08:11:18 jmmv Exp $
 
-DISTNAME=	sysbuild-2.7
-PKGREVISION=	2
+DISTNAME=	sysbuild-2.8
 CATEGORIES=	sysutils
-MASTER_SITES=	https://github.com/jmmv/sysbuild/releases/download/sysbuild-2.7/
+MASTER_SITES=	https://github.com/jmmv/sysbuild/releases/download/sysbuild-2.8/
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	Automates builds of NetBSD and manages source trees
@@ -21,19 +20,6 @@ INSTALL_MAKE_FLAGS+=	sysbuild_confdir=${EGDIR}
 EGDIR=			${PREFIX}/share/examples/sysbuild
 CONF_FILES+=		${EGDIR}/default.conf ${PKG_SYSCONFDIR}/default.conf
 
-PKG_OPTIONS_VAR=	PKG_OPTIONS.sysbuild
-PKG_SUPPORTED_OPTIONS=	tests
-PKG_SUGGESTED_OPTIONS=	tests
-
-.include "../../mk/bsd.options.mk"
-
-.if !empty(PKG_OPTIONS:Mtests)
-.  include "../../devel/atf/buildlink3.mk"
-PLIST_SUBST+=	TESTS=
-.else
-PLIST_SUBST+=	TESTS=@comment
-.endif
-
-BUILDLINK_API_DEPENDS.shtk+=	shtk>=1.3
+BUILDLINK_API_DEPENDS.shtk+=	shtk>=1.7
 .include "../../devel/shtk/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
