--- a/audio/fluidsynth/Makefile
+++ b/audio/fluidsynth/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.83 2024/12/10 14:17:39 nia Exp $
+# $NetBSD: Makefile,v 1.84 2025/01/01 14:28:04 ryoon Exp $
 
-DISTNAME=	fluidsynth-2.4.1
+DISTNAME=	fluidsynth-2.4.2
 CATEGORIES=	audio
 MASTER_SITES=	${MASTER_SITE_GITHUB:=FluidSynth/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
